# kocut

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_task.yml  feature_request.yml  security_review.yml
.github/workflows/: ci.yml  tests.yml
docs/development/: development-notes.md  release-checklist.md  security-review.md
docs/examples/: README.md  sample.cuts.edl  sample.cuts.md  sample.meta.json  sample.srt
kocut/: __init__.py  __main__.py  audio.py  cli.py  director.py  fcpxml.py  fillers.py  gui.py  korean.py  logger.py  output.py  pipeline.py  preview.py  quality.py  refine.py  retakes.py  review.py  shorts.py  silence.py  subtitles.py  transcribe.py  types.py  xmeml.py
tests/: test_fillers.py  test_output.py  test_quality_v051.py  test_regressions_v027.py  test_regressions_v028_post1.py  test_regressions_v029.py  test_regressions_v030.py  test_regressions_v040.py  test_regressions_v042.py  test_regressions_v050.py  test_regressions_v070.py  test_regressions_v080.py  test_regressions_v090.py  test_regressions_v091.py  test_retakes.py  test_robustness.py  test_shorts.py  test_silence.py  test_subtitles.py
