[project]
name = "kocut"
version = "0.5.1"
description = "?쒓뎅???곸긽 ?먮룞 ?몄쭛 蹂댁“ ?꾧뎄 (?먮쭑 + 而??꾨낫 異붿텧)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "faster-whisper>=1.0.0",
    "kiwipiepy>=0.17.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "rapidfuzz>=3.0.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
]
gui = [
    "gradio>=5.0.0",
]

[project.scripts]
kocut = "kocut.cli:main"
kocut-gui = "kocut.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kocut"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

